--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     I am a dedicated developer and co-founder of BCore, a cutting-edge software company. 
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="./batikanyilmazresume.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -43,10 +43,10 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am a final year student at Istanbul Bilgi University and the Co-Founder of NCore, specializing in mobile application development. My focus is on developing fun apps that utilize AI technologies and create engaging user experiences. I have also designed a user-friendly needs app for capturing and organizing important information across various contexts. 
+                        I am a senior student at Istanbul Bilgi University and Co-Founder r of BCore, which specializes in mobile applications and artificial intelligence-based applications. My focus is on developing fun apps that use AI technologies and create engaging user experiences. Developing user-friendly applications for businesses to reach people. I also designed a user-friendly needs application to collect and organize important information in various contexts.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="./batikanyilmazresume.pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
