--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am a senior student at Istanbul Bilgi University and Co-Founder r of BCore, which specializes in mobile applications and artificial intelligence-based applications. My focus is on developing fun apps that use AI technologies and create engaging user experiences. Developing user-friendly applications for businesses to reach people. I also designed a user-friendly needs application to collect and organize important information in various contexts.
+                        I am a senior student at Istanbul Bilgi University and Co-Founder of BCore, which specializes in mobile applications and artificial intelligence-based applications. My focus is on developing fun apps that use AI technologies and create engaging user experiences. Developing user-friendly applications for businesses to reach people. I also designed a user-friendly needs application to collect and organize important information in various contexts.
                     </p>
                     <div class="btn-con">
                         <a href="./batikanyilmazresume.pdf" class="main-btn">
